
The list_communitities() function now properly orders formgroups and
yeargroups.

The Register's absence_list now provides a shortcut link to each form
group.

Fixed report_assessments_view.php to handle assessments with numerical
scores as well as grades and to work when the chosen responsibility is
for only a subject.

Started new ReportBook option for summarising attendance.


Version ClaSS-0.8.27 release (2007/09/11)
-----------------------------------------

Tidied the address labels to have the title and country properly
displayed.

Contacts now have four blank phone records by default and only four
phone records as a maximum.

The EntryBook now cycles through up to two new contacts for each
student.

Added an attendance code 'L' for authorised lates.


Version ClaSS-0.8.26 release (2007/09/10)
-----------------------------------------

Fixed bug with Add New Contact which was only affecting new contacts
created from student_view in the InfoBook but was setting gid=0 for
each new one.

Moved the emails for new PINs code from the Admin passwords page to be
a part of the update_user function. So, any new PIN is always emailed
to the member of staff (as long as $CFG->email options are set). This
also now uses the send_email_to() function instead of just plain mail().

Added the status to emails for incidents.


Version ClaSS-0.8.25 release (2007/09/02)
-----------------------------------------

Bug fixed the staff_details page which was choking on the new senrole
field, this needed senrole adding to the permissions' functions and
confusion in the use of $key (when it should be $index) before using
the set_list_vars.

Some database changes to finalise the incident tracking and "inc"
entries to categorydef to get started.

The Incidents has been moved from fetchStudent() to its own
fetchIncidents() function and Actions added to include the incident's
history.

To allow new actions to be added on to the end of an open Incident