@@ -19,6 +19,9 @@ for only a subject.
 
 Started new ReportBook option for summarising attendance.
 
+Added the teacher's name to the display of comments and incidents in
+the InfoBook.
+
 
 Version ClaSS-0.8.27 release (2007/09/11)
 -----------------------------------------
